<resources>
    <string name="app_name">Sanggoroe</string>
    <string name="enterEmail">Email</string>
    <string name="errorEmail">invalid email</string>
    <string name="enterPassword">Password</string>
    <string name="errorPassword">Invalid Password</string>
    <string name="login">Login</string>
    <!--    <string name="default_web_client_id" translatable="false">510167583001-vhipa1bc4vroji17c6iuovh8inlu12ln.apps.googleusercontent.com</string>-->
    <string name="entarUsername">Username</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="share_your_location">Share Location</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="add_post">Add Post</string>
    <string name="chat">Chat</string>
    <string name="notification">Notification</string>
    <string name="notif">Notif</string>
    <string name="settings">Setting</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="send_success">Berhasil terkirim</string>
    <string name="send_error">Gagal terkirim</string>

    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Laoreet suspendisse interdum consectetur libero id faucibus. Sed libero enim sed faucibus turpis in eu mi bibendum. Neque viverra justo nec ultrices dui sapien. Quam viverra orci sagittis eu volutpat. Elementum pulvinar etiam non quam lacus suspendisse faucibus. Tellus cras adipiscing enim eu turpis egestas pretium. Hendrerit dolor magna eget est lorem ipsum.</string>
    <string name="company_logo">Company_logo</string>
    <string name="company_name">Company Name</string>
    <string name="experience_description">Experience Description</string>
    <string name="experience_duration">Experience Duration</string>
    <string name="skill_user">Skill User</string>
    <string name="skill3_prompt">Skill 3</string>
    <string name="skill2_prompt">Skill 2</string>
    <string name="skill1_prompt">Skill 1</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="title_recommendation">Recommendation</string>
    <string name="fragment_detail">Detail Fragment</string>
</resources>