<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.sanggoroe.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_navigation_home_to_detailFragment"
            app:destination="@id/navigation_detailFragment" />

    </fragment>

    <fragment
        android:id="@+id/navigation_detailFragment"
        android:name="com.capstone.sanggoroe.ui.post.DetailFragment"
        android:label="@string/fragment_detail"
        tools:layout="@layout/fragment_detail"/>


    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.capstone.sanggoroe.ui.chat.ChatFragment"
        android:label="@string/chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_post"
        android:name="com.capstone.sanggoroe.ui.post.PostFragment"
        android:label="@string/add_post"
        tools:layout="@layout/fragment_post" />

    <fragment
        android:id="@+id/navigation_recommendation"
        android:name="com.capstone.sanggoroe.ui.recommend.RecommendFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_recommend" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.capstone.sanggoroe.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" >

        <action
            android:id="@+id/action_navigation_profile_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.capstone.sanggoroe.ui.profile.EditProfileFragment"
        android:label="@layout/fragment_edit_profile"
        tools:layout="@layout/fragment_edit_profile" />
</navigation>
