<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

<!--    <item-->
<!--        android:id="@+id/navigation_chat"-->
<!--        android:icon="@drawable/ic_chat"-->
<!--        android:title="@string/chat" />-->

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_add"
        android:title="@string/add_post" />

<!--    <item-->
<!--        android:id="@+id/navigation_recommendation"-->
<!--        android:icon="@drawable/ic_notifications_black_24dp"-->
<!--        android:title="@string/title_recommendation" />-->

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile" />

</menu>